--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "query-string": "^6.8.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.0"
   },
   "scripts": {
