--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "burger-builder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://burger-builder-5f661.web.app/",
   "dependencies": {
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
