--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.0",
-    "serialize-javascript": "2.1.1"
+    "serialize-javascript": "2.1.1",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
