--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.0",
     "axios": "^0.19.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
     "serialize-javascript": "2.1.1",
     "styled-components": "^4.4.0",
     "typescript": "^3.8.2"
@@ -50,7 +49,6 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "react-test-renderer": "^16.12.0",
-    "redux-devtools-extension": "^2.13.8"
+    "react-test-renderer": "^16.12.0"
   }
 }
